--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "OANNAServiceProvider"
+                "OANNA\\OANNAServiceProvider"
             ]
         }
     },
